test/resources/execution/failing/Array5.grading.amy
object Array5
 val i:Boolean[] = new Boolean[-1]; 0
end Array5